--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -906,6 +906,20 @@ address > .copyright {
 
 @media all and (max-width: 480px) {
   /** HEADER **/
+  #header {
+    background-color: #f7f8f8;
+  }
+  #header.now-on {
+    /* box-shadow: 1px 3px 12px rgba(88, 88, 88, 0.2); */
+    border-bottom: 1px solid #24cd88;
+  }
+  header {
+    background-color: #f7f8f8;
+    border-bottom: none;
+  }
+  header:hover {
+    border: none;
+  }
   .header-inner {
     max-width: unset;
     min-width: unset;
@@ -917,7 +931,7 @@ address > .copyright {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 94px;
+    width: 98px;
     padding-top: 3px;
     margin-right: 0;
   }
@@ -929,13 +943,46 @@ address > .copyright {
   .header-inner > .mobile-menu-btn,
   .header-inner > .search-slide-btn {
     display: inline-block;
-    width: 26px;
-    height: 26px;
-    background-color: lightblue;
+    position: relative;
+    width: 24px;
+    height: 24px;
+  }
+  .mobile-menu-btn > .link-area {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 18px;
+    height: 16px;
+  }
+  .mobile-menu-btn > .link-area > .menu-line {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 1px;
+    border-radius: 50%;
+    background-color: #676767;
+  }
+  .mobile-menu-btn > .link-area > .menu-line.line-1 {
+    top: 0;
+  }
+  .mobile-menu-btn > .link-area > .menu-line.line-2 {
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .mobile-menu-btn > .link-area > .menu-line.line-3 {
+    bottom: 0;
   }
   .header-inner > .search-slide-btn {
     float: right;
     border: none;
+    background-color: unset;
+    background-image: url("../img/icon/icon-search-31.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 19px;
   }
 
   /* HEADER >> detail slider */
