--- a/src/css/style.css
+++ b/src/css/style.css
@@ -829,10 +829,23 @@ body {
   #main .content-section .content-article.intro-keyword-now {
     display: block;
     width: 300px;
-    /* margin: 0 auto 24px; */
     margin: 0 auto;
   }
   #main .content-section .content-article.intro-keyword-now {
     padding-bottom: 24px;
+  }
+
+  /** CONTENT PAGE 480px **/
+  /** CONTENT PAGE >> NOW PAGE 480px **/
+  .tab-section article {
+    width: 100%;
+    margin-bottom: 14px;
+  }
+  .tab-article .tab-list .tab-item {
+    padding: 8px 24px;
+    font-size: 20px;
+  }
+  #main .content-article {
+    margin-bottom: 14px;
   }
 }
