--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -85,6 +85,8 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  /* transform: skew(-0.01deg); */
+  /* transform: skew(-0.001deg); */
 }
 article,
 aside,
