--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -722,8 +722,9 @@ address > .copyright {
 }
 .show-all-content .content-item .content-subs-item {
   display: inline-block;
-  font-size: 14px;
   line-height: 35px;
+  font-size: 14px;
+  font-weight: 500;
   color: #888;
   text-align: center;
   vertical-align: middle;
@@ -799,6 +800,7 @@ address > .copyright {
 }
 .show-origin-top .origin-channel {
   float: left;
+  font-weight: 600;
   color: #676767;
 }
 .show-origin-top .origin-top-right {
@@ -823,7 +825,7 @@ address > .copyright {
 .show-origin-content > .origin-content-title > h3 {
   margin-bottom: 8px;
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 800;
 }
 .show-origin-content > .origin-content-title > .origin-link-wrap {
 }
@@ -854,12 +856,16 @@ address > .copyright {
   min-height: 140px;
   max-height: 400px;
   padding: 14px 15px;
-  line-height: 1.4;
   background-color: #f5f5f5;
   border-radius: 13px;
-  word-break: keep-all;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.8;
+  transform: skew(-0.01deg);
   color: #676767;
+  word-break: keep-all;
   overflow-y: auto;
+  box-shadow: inset 1px -1px 6px rgba(88, 88, 88, 0.1);
 }
 
 .show-origin-inner > .show-origin-bottom {
@@ -893,6 +899,7 @@ address > .copyright {
 }
 .origin-info-list > .origin-info-item > * {
   display: inline-block;
+  font-weight: 600;
 }
 .origin-info-item > .info-title {
   margin-right: 10px;
