--- a/src/css/font.css
+++ b/src/css/font.css
@@ -3,8 +3,7 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css");
 
 * {
-  font-family: "Pretendard", "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic,
-    "sans-serif";
+  font-family: "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic, "sans-serif";
   /* font-family: "Pretendard", "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic,
     "sans-serif"; */
 }
