--- a/src/css/font.css
+++ b/src/css/font.css
@@ -3,7 +3,8 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css");
 
 * {
-  font-family: "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic, "sans-serif";
+  font-family: "Pretendard", "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic,
+    "sans-serif";
   /* font-family: "Pretendard", "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic,
     "sans-serif"; */
 }
@@ -16,7 +17,8 @@ input,
 textarea,
 select,
 button {
-  font-family: "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic, "sans-serif";
+  font-family: "Pretendard", "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic,
+    "sans-serif";
   /* font-family: "Noto Sans KR", Apple Gothic, "sans-serif"; */
   font-size: 14px;
   /* color: #2a2a2a; */
