--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -314,7 +314,8 @@ header:hover {
 }
 /* .detail-keyword-area input[type="text"] { */
 input[type="text"] {
-  width: calc(100% - 28px);
+  /* width: calc(100% - 28px); */
+  width: 100%;
   height: 32px;
   border: 1px solid #bbb;
   border-radius: 6px;
@@ -331,14 +332,23 @@ input[type="date"]:hover {
   border: 1px solid #24cd88;
 }
 
-.detail-keyword-area .detail-input .add-btn {
+.detail-keyword-area .detail-input {
   position: relative;
+}
+.detail-keyword-area .detail-input .add-btn {
+  /* position: relative; */
   display: inline-block;
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
   width: 20px;
   height: 20px;
   margin-left: 6px;
-  background-color: #f7f8f8;
-  border: 1px solid #bbb;
+  /* background-color: #f7f8f8; */
+  background-color: #eaeaea;
+  /* border: 1px solid #bbb; */
+  border: none;
   border-radius: 4px;
   text-indent: -99999px;
 }
@@ -350,7 +360,16 @@ input[type="date"]:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #555;
+  /* background-color: #555; */
+  background-color: #888;
+}
+.detail-keyword-area .detail-input .add-btn:hover {
+  /* background-color: #24cd88; */
+  background-color: #ddd;
+}
+.detail-keyword-area .detail-input .add-btn:hover::before,
+.detail-keyword-area .detail-input .add-btn:hover::after {
+  /* background-color: #fff; */
 }
 
 .detail-keyword-area .detail-input .add-btn::before {
@@ -1120,6 +1139,12 @@ address > .copyright {
   .detail-keyword-area .detail-search .detail-title {
     left: 0;
     font-size: 15px;
+  }
+  .detail-keyword-area .detail-search .detail-option {
+    float: none;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
   .detail-keyword-area .detail-search .detail-input {
     right: 0;
