--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,10 +1,10 @@
 /** HEADER **/
 #header {
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   height: auto;
-  top: -14px;
-  padding-top: 14px;
   background-color: #fff;
   z-index: 200;
 }
@@ -190,8 +190,7 @@ header:hover {
 .detail-slider {
   display: none;
   position: absolute;
-  /* top: 63px; */
-  top: 77px;
+  top: 63px;
   left: 0;
   width: 100%;
   padding-bottom: 28px;
@@ -344,7 +343,6 @@ input[type="date"]:hover {
   transform: translateY(-50%);
   width: 20px;
   height: 20px;
-  margin-left: 6px;
   /* background-color: #f7f8f8; */
   background-color: #eaeaea;
   /* border: 1px solid #bbb; */
@@ -987,7 +985,7 @@ address > .copyright {
     width: 18px;
     height: 16px;
   }
-  .mobile-menu-btn > .link-area > .menu-line {
+  .mobile-menu-btn > .link-area .menu-line {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -996,14 +994,14 @@ address > .copyright {
     border-radius: 50%;
     background-color: #676767;
   }
-  .mobile-menu-btn > .link-area > .menu-line.line-1 {
+  .mobile-menu-btn > .link-area .menu-line.line-1 {
     top: 0;
   }
-  .mobile-menu-btn > .link-area > .menu-line.line-2 {
+  .mobile-menu-btn > .link-area .menu-line.line-2 {
     top: 50%;
     transform: translate(-50%, -50%);
   }
-  .mobile-menu-btn > .link-area > .menu-line.line-3 {
+  .mobile-menu-btn > .link-area .menu-line.line-3 {
     bottom: 0;
   }
   .header-inner > .search-slide-btn {
@@ -1020,7 +1018,7 @@ address > .copyright {
   .detail-slider {
     top: 0;
     left: 0;
-    right: 0;
+    /* right: 0; */
   }
   .detail-slider input[type="text"],
   .detail-slider input[type="date"] {
@@ -1040,10 +1038,10 @@ address > .copyright {
   }
 
   .slider-inner .detail-area-wrap {
-    /* display: flex;
+    display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center; */
+    /* align-items: center; */
+    justify-content: center;
   }
   .detail-area-wrap .detail-area {
     width: 316px;
@@ -1100,21 +1098,26 @@ address > .copyright {
     font-size: 0;
   }
   .search-area input[type="date"] {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
     width: 100%;
     padding-right: 5px;
     text-indent: 8px;
   }
   .search-date-wrap > .search-date {
     width: 48%;
+    height: 60px;
     margin-right: 0;
   }
   .search-date-wrap > .search-date:first-child {
-    margin-right: 2%;
+    margin-right: 4%;
   }
   .search-date-wrap .date-title {
-    position: relative;
-    top: unset;
-    left: unset;
+    display: block;
+    top: 0;
+    left: 0;
     transform: unset;
     margin-bottom: 6px;
     color: #313131;
