--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -234,7 +234,7 @@ header:hover {
 
 /* detail slider */
 .detail-slider {
-  /* display: none; */
+  display: none;
   position: absolute;
   top: 63px;
   left: 0;
