--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,13 @@
 @import url("./common.css");
 @import url("./layout.css");
 
+/** SAMPLE **/
+.chart-dummy.engagement {
+  width: 190px;
+  height: 190px;
+  background-color: lightgreen;
+}
+
 /** COMMON **/
 .blind {
   display: block;
@@ -1038,6 +1045,12 @@ body {
 }
 
 @media all and (max-width: 480px) {
+  /** SAMPLE **/
+  .chart-dummy.engagement {
+    /* margin-right: 28px; */
+    /* margin-bottom: 90px; */
+  }
+
   /** COMMON 480px **/
   #main .content-article.width-2-1 {
     /* width: calc(50% - 12px); */
@@ -1171,9 +1184,71 @@ body {
   }
   #main .tab-section .tab-title-article {
     height: auto;
-    padding: 20px 24px 24px;
+    padding: 20px 24px;
   }
   .tab-title-article .article-content {
     display: block;
+  }
+  .tab-title-article .tab-title {
+    font-size: 17px;
+  }
+
+  .article-engagement .article-chart-wrap {
+    display: block;
+  }
+  .article-engagement .chart-area {
+    width: auto;
+    height: 254px;
+    padding-bottom: 70px;
+  }
+  .article-engagement .chart-info-area {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .article-engagement .chart-info-area > .chart-info-list {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    font-size: 0;
+  }
+  .chart-info-area .info-item {
+    display: inline-block;
+    /* position: absolute; */
+    margin-right: 0;
+  }
+  .chart-info-area .info-item.info-engagement {
+    position: absolute;
+    right: 10px;
+    bottom: 130px;
+    display: block;
+  }
+  .chart-info-area .info-item.info-engagement > .item-title {
+    font-size: 15px;
+  }
+  .chart-info-area .info-item.info-engagement > .item-num {
+    font-size: 21px;
+  }
+  .chart-info-area .info-item.info-views {
+    width: 31%;
+  }
+  .chart-info-area .info-item.info-comments {
+    width: 31%;
+  }
+  .chart-info-area .info-item.info-likes {
+    width: 22%;
+  }
+  .chart-info-area .info-item.info-shares {
+    width: 16%;
+  }
+  .chart-info-area .info-item > .item-title {
+    font-size: 14px;
+  }
+  .chart-info-area .info-item > .item-num {
+    margin-top: -3px;
+    font-size: 19px;
   }
 }
