--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,10 @@
   background-color: lightgreen;
 }
 
+.mo-section {
+  display: none;
+}
+
 /** COMMON **/
 .blind {
   display: block;
@@ -1053,6 +1057,13 @@ body {
     /* margin-bottom: 90px; */
   }
 
+  .pc-section {
+    display: none;
+  }
+  .mo-section {
+    display: block;
+  }
+
   /** COMMON 480px **/
   #main .content-article.width-2-1 {
     /* width: calc(50% - 12px); */
@@ -1195,6 +1206,7 @@ body {
     font-size: 17px;
   }
 
+  /** CONTENT PAGE >> NOW PAGE >> engagement 480px **/
   .article-engagement .article-chart-wrap {
     display: block;
   }
@@ -1252,5 +1264,64 @@ body {
   .chart-info-area .info-item > .item-num {
     margin-top: -2px;
     font-size: 19px;
+  }
+
+  /** CONTENT PAGE >> NOW PAGE >> channel details 480px **/
+  .article-card-wrap {
+    width: calc(100% + 48px);
+    margin-left: -24px;
+    overflow-x: scroll;
+    /* overflow: hidden; */
+  }
+  .detail-card-list {
+    width: calc(210px * 5 + 14px * 4 + 48px);
+    padding: 0 24px;
+    font-size: 0;
+    margin-bottom: 12px;
+    /* margin-left: -24px; */
+  }
+  .detail-card-list > .card-item {
+    display: inline-block;
+    width: 210px;
+    padding: 16px 20px;
+    margin-right: 14px;
+    border-radius: 10px;
+    background-color: #f5f5f5;
+    box-shadow: 1px 3px 12px rgba(88, 88, 88, 0.2);
+    font-size: 14px;
+  }
+  .detail-card-list > .card-item:last-child {
+    margin-right: 0;
+  }
+  .detail-card-list .card-item > .item-title {
+    margin-bottom: 14px;
+    font-size: 17px;
+    font-weight: 600;
+  }
+  .detail-card-list .card-item > .card-sub-list {
+    width: 100%;
+  }
+  .card-sub-list > .sub-item {
+    margin-bottom: 10px;
+  }
+  .card-sub-list > .sub-item:last-child {
+    margin-bottom: 0;
+  }
+  .card-sub-list > .sub-item::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+  .card-sub-list > .sub-item .sub-title,
+  .card-sub-list > .sub-item .sub-subs {
+    display: block;
+    font-weight: 500;
+  }
+  .card-sub-list > .sub-item .sub-title {
+    float: left;
+  }
+  .card-sub-list > .sub-item .sub-subs {
+    float: right;
+    color: #8b8d91;
   }
 }
