--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -989,7 +989,7 @@ address > .copyright {
     height: 24px;
   }
   .mobile-menu-btn > .link-area {
-    display: inline-block;
+    display: block;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -1003,7 +1003,6 @@ address > .copyright {
     transform: translateX(-50%);
     width: 100%;
     height: 1px;
-    border-radius: 50%;
     background-color: #676767;
   }
   .mobile-menu-btn > .link-area .menu-line.line-1 {
