--- a/src/css/style.css
+++ b/src/css/style.css
@@ -861,7 +861,7 @@ body {
 .article-content .slide-btn-wrap > .slide-btn {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
   width: 40px;
   height: 40px;
   border-radius: 50%;
