--- a/src/css/style.css
+++ b/src/css/style.css
@@ -618,6 +618,7 @@ body {
   width: 100%;
   border-radius: 10px 10px 0 0;
   font-size: 0;
+  overflow: hidden;
 }
 .article-list-wrap .detail-item.item-subs .item-sub-list {
   transition: 0.3s;
@@ -684,6 +685,15 @@ body {
   background-color: #ebebeb;
   border-radius: 8px;
   overflow: hidden;
+  transition: 0.3s;
+}
+.detail-item
+  > .item-sub-list
+  > .detail-subs
+  > .chart-horizontal
+  > .total-posts:hover {
+  transform: scale(1.05, 3);
+  /* box-shadow: 1px 3px 12px rgb(128 128 128 / 20%); */
 }
 .detail-item
   > .item-sub-list
@@ -787,22 +797,67 @@ body {
 
 /** CONTENT PAGE >> TREND PAGE **/
 .article-content > .article-content-top {
-  display: flex;
+  /* display: flex;
   flex-wrap: nowrap;
-  justify-content: right;
+  justify-content: right; */
+  position: relative;
+  width: 100%;
+  height: 22px;
   margin: -10px 0 8px;
 }
-.article-content-top > .period-select {
-  /* width: 195px; */
+.article-content > .article-content-top::after {
+  content: "";
+  display: block;
+  clear: both;
 }
-.article-content-top .period-list {
+.article-content-top > .color-info {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.article-content-top > .color-list {
+}
+.article-content-top .color-item {
+  display: inline-block;
+  margin-left: 10px;
+}
+.article-content-top .color-item:first-child {
+  margin-left: 0;
+}
+.article-content-top .color-item > .item-color,
+.article-content-top .color-item > .item-name {
+  display: inline-block;
+}
+.article-content-top .color-item > .item-color {
+  width: 20px;
+  height: 6px;
+  background-color: #ddd;
+  border-radius: 10px;
+  vertical-align: 1px;
+}
+.article-content-top .color-item > .item-name {
+  margin-left: 2px;
+  line-height: 22px;
+  font-size: 12px;
+  font-weight: 500;
+}
+.article-content-top > .period-select,
+.article-content-top > .method-select {
+  /* position: absolute;
+  top: 0;
+  right: 0; */
+  float: right;
+  margin-left: 80px;
+}
+.article-content-top .period-list,
+.article-content-top .method-list {
   font-size: 0;
 }
-.article-content-top .period-list > .period-item {
+.article-content-top .period-list > .period-item,
+.article-content-top .method-list > .method-item {
   display: inline-block;
-  /* width: 65px; */
-  /* max-width: 65px; */
-  padding: 2px 10px 0;
+  padding: 1px 10px 0;
   margin-left: 6px;
   line-height: 18px;
   font-size: 11px;
@@ -812,13 +867,16 @@ body {
   font-weight: 600;
   cursor: pointer;
 }
-.article-content-top .period-list > .period-item:first-child {
+.article-content-top .period-list > .period-item:first-child,
+.article-content-top .method-list > .method-item:first-child {
   margin-left: 0;
 }
-.article-content-top .period-list > .period-item:hover {
+.article-content-top .period-list > .period-item:hover,
+.article-content-top .method-list > .method-item:hover {
   border: 1px solid #ccc;
 }
-.article-content-top .period-list > .period-item.now-on {
+.article-content-top .period-list > .period-item.now-on,
+.article-content-top .method-list > .method-item.now-on {
   border: 1px solid #24cd88;
   color: #24cd88;
   cursor: default;
@@ -842,7 +900,6 @@ body {
   margin-bottom: 8px;
   font-size: 16px;
   font-weight: 700;
-  /* color: #636565; */
   color: #24cd88;
 }
 .trend-rank-list .rank-list > .rank-item.item-title {
@@ -903,7 +960,7 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  border: none;
+  border: 1px solid #fefefe;
   background-color: #fff;
   box-shadow: 1px 3px 12px rgba(128, 128, 128, 0.2);
 }
