--- a/src/css/style.css
+++ b/src/css/style.css
@@ -844,11 +844,21 @@ body {
 }
 .article-content-top > .period-select,
 .article-content-top > .method-select {
+  float: right;
   /* position: absolute;
   top: 0;
   right: 0; */
-  float: right;
-  margin-left: 80px;
+  /* margin-left: 80px; */
+}
+.article-sentiment-keyword .article-content-top,
+.article-keyword-ranking .article-content-top {
+  width: 100%;
+  margin: 0 0 8px;
+}
+.article-sentiment-keyword .article-content-top > .method-select,
+.article-keyword-ranking .article-content-top > .method-select {
+  float: none;
+  text-align: center;
 }
 .article-content-top .period-list,
 .article-content-top .method-list {
